fixing title size on mobile

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -533,6 +533,11 @@ footer{
   footer{
     margin-top: 400px !important;
   }
+  #contact{
+    #title_style_h1{
+      font-size: 2.5em;
+    }
+  }
 }
 
 @media screen and (max-width: 400px){
@@ -585,6 +590,9 @@ footer{
   #content-contact, #form-contact{
     margin: 0 !important;
   }
-
-
+  #contact{
+    #title_style_h1{
+      font-size: 2.5em;
+    }
+  }
 }
